<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:id="@+id/cityList_title"
        android:layout_width="match_parent"
        android:layout_height="101px"
        android:text="@string/selectCity"
        android:gravity="center"
        android:textSize="45px"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@color/wihte"
        />
    <ImageButton
        android:id="@+id/cityList_btnBack"
        android:layout_width="85px"
        android:layout_height="101px"
        android:background="@color/transparent"
        android:src="@mipmap/icon_back"/>
    <TextView
        android:id="@+id/cityList_locationTitle"
        android:layout_below="@id/cityList_btnBack"
        style="@style/CityTextViewItemTitle"
        android:text="@string/locCityTitle"/>
    <View
        android:id="@+id/cityList_occupyPlace"
        android:layout_height="91px"
        android:layout_width="match_parent"
        android:layout_below="@id/cityList_locationTitle"/>
    <ListView
        android:id="@+id/cityList_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/wihte"
        android:layout_below="@id/cityList_occupyPlace"
        android:divider="@null">

    </ListView>
    <TextView
        android:id="@+id/cityList_presentGroupName"
        android:layout_alignTop="@id/cityList_listView"
        style="@style/CityTextViewItemTitle"
        android:text="@string/groupName"/>
    <TextView
        android:id="@+id/cityList_locationCity"
        style="@style/CityTextViewItemContent"
        android:layout_below="@id/cityList_locationTitle"
        android:background="@drawable/locationcity_item_bg"/>

    <View
        android:id="@+id/cityList_floatingBck"
        android:layout_width="134px"
        android:layout_height="134px"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:alpha="0.2"
        android:background="@drawable/citylist_floatingmention_shape"/>
    <TextView
        android:id="@+id/cityList_floatingMention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alphbert"
        android:textSize="96px"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_centerInParent="true"
        />
    <com.example.softpo.nemovieticketpractice.widget.ShortNameSideBar
        android:id="@+id/citylist_floatingmention_sideBar"
        android:layout_width="40px"
        android:layout_height="match_parent"
        android:layout_below="@id/cityList_title"
        android:layout_alignParentRight="true"
        android:layout_marginRight="18px"/>
</com.zhy.autolayout.AutoRelativeLayout>