<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:clipChildren="false"
              android:layout_height="match_parent"
    android:background="@color/slightGray">
    <View
        android:id="@+id/hotMoviePagerFragment_frame"
        android:layout_width="match_parent"
        android:alpha="0.2"
        android:layout_height="match_parent"
        android:background="@color/black"/>
    <android.support.v4.view.ViewPager
        android:id="@+id/hotMoviePagerFragment_viewPager"
        android:clipChildren="false"
        android:layout_marginTop="40px"
        android:layout_marginLeft="80px"
        android:layout_marginRight="80px"
        android:layout_width="match_parent"
        android:layout_height="745px"
        android:background="@color/transparent"
        >

    </android.support.v4.view.ViewPager>
    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/hotMoviePagerFragment_nameFrame"
        android:layout_below="@id/hotMoviePagerFragment_viewPager"
        android:layout_marginTop="25px"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/hotMoviePagerFragment_nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filmName"
            android:textSize="43px"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/hotMoviePagerFragment_gradeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filmGrade"
            android:textSize="40px"
            android:layout_marginLeft="20px"
            android:textColor="@color/theme_orange"
            />
    </com.zhy.autolayout.AutoLinearLayout>
    <TextView
        android:id="@+id/hotMoviePagerFragment_highlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highlight"
        android:layout_below="@id/hotMoviePagerFragment_nameFrame"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20px"
        android:textSize="32px"
        android:textColor="@color/DarkerGray"
        />
    <TextView
        android:id="@+id/hotMoviePagerFragment_btnText"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/hotMoviePagerFragment_highlight"
        android:layout_marginTop="20px"
        android:layout_width="260px"
        android:layout_height="70px"
        android:text="@string/selectSeat"
        android:gravity="center"
        android:textColor="@color/wihte"
        android:padding="0dp"
        android:textSize="40px"
        android:background="@drawable/btn_rounded_rectangle"/>

</com.zhy.autolayout.AutoRelativeLayout>