<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:descendantFocusability="blocksDescendants"
              android:layout_width="719px"
              android:layout_height="220px">
    <ImageView
        android:id="@+id/filmItem_logoImage"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20px"
        android:layout_width="130px"
        android:layout_height="177px"
        android:scaleType="fitXY"
        android:src="@mipmap/default_movie"/>
    
    <ImageView
        android:id="@+id/filmItem_iconTypeImage"
        android:layout_width="63px"
        android:layout_height="63px"
        android:src="@mipmap/icon_type_3dimax"
        android:layout_alignTop="@id/filmItem_logoImage"
        android:layout_alignLeft="@id/filmItem_logoImage"
        android:visibility="invisible"/>
    
    <ImageView
        android:layout_width="42px"
        android:layout_height="42px"
        android:src="@mipmap/icon_preplay"
        android:layout_alignLeft="@id/filmItem_logoImage"
        android:layout_alignBottom="@id/filmItem_logoImage"
        android:layout_marginLeft="5px"
        android:layout_marginBottom="5px"/>

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/filmItem_titleBlock"
        android:layout_width="match_parent"
        android:layout_height="40px"
        android:layout_marginRight="20px"
        android:layout_marginLeft="20px"
        android:layout_alignTop="@id/filmItem_logoImage"
        android:layout_toRightOf="@id/filmItem_logoImage"
        >
        <TextView
            android:id="@+id/filmItem_titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="39px"
            android:maxWidth="340px"
            android:ellipsize="end"
            android:textStyle="bold"
            android:lines="1"
            android:text="@string/filmName"/>
        <ImageView
            android:id="@+id/filmItem_cinemaItem"
            android:layout_width="50px"
            android:layout_height="28px"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            android:layout_toRightOf="@id/filmItem_titleText"
            android:visibility="invisible"
            android:src="@mipmap/cinema_item_new_movie"/>
        <TextView
            android:id="@+id/filmItem_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="30px"
            android:textStyle="bold"
            android:textColor="@color/theme_orange"
            android:text="@string/filmGrade"/>
    </com.zhy.autolayout.AutoRelativeLayout>
    <TextView
        android:id="@+id/filmItem_highLight"
        android:layout_below="@id/filmItem_titleBlock"
        android:layout_alignLeft="@id/filmItem_titleBlock"
        android:layout_marginTop="40px"
        android:layout_width="500px"
        android:maxLines="2"
        android:textSize="25px"
        android:ellipsize="end"
        android:layout_height="wrap_content"
        android:text="@string/highlight"/>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_below="@id/filmItem_highLight"
        android:layout_alignLeft="@id/filmItem_highLight"
        android:layout_marginTop="25px">
        <ImageView
            android:id="@+id/filmItem_screeningsFlag"
            android:layout_width="28px"
            android:layout_height="28px"
            android:src="@mipmap/order_icon_time"/>
        <TextView
            android:id="@+id/filmItem_screenings"
            android:layout_width="wrap_content"
            android:maxLines="2"
            android:textSize="34px"
            android:ellipsize="end"
            android:textColor="@color/DarkGray"
            android:layout_height="wrap_content"
            android:text="@string/screenings"/>
    </com.zhy.autolayout.AutoLinearLayout>


    <com.example.softpo.nemovieticketpractice.widget.MyTextButtonFrameLayout
        android:id="@+id/filmItem_textButton"
        android:layout_alignBottom="@id/filmItem_logoImage"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20px"
        android:layout_width="143px"
        android:focusable="true"
        android:background="@drawable/orange_button_selector"
        android:layout_height="50px">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="30px"
            android:textStyle="bold"
            android:textColor="@color/wihte"
            android:text="@string/orderNow"/>
    </com.example.softpo.nemovieticketpractice.widget.MyTextButtonFrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:background="@color/slightGray"/>

</com.zhy.autolayout.AutoRelativeLayout>